# NAME

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py  config.py  main.py
data/schema/: 00_init.sql  01_characters.sql  02_classics.sql  03_famous_names.sql  04_rules.sql  05_name_char_stats.sql
data/seed/: character_reviews.py  characters_seed.py  chinese_surnames.py  classics_corpus.py  famous_names_corpus.py  homophone_risks.py  reviewed_top1000.json  shuli_81.py  tiaohou_rules.py  yijing_64.py
docs/: classics_sources.md  data_sources.md  famous_sources.md  llm_cost.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  (+1 more)
scripts/: apply_reviews.py  audit_character_reviews.py  bootstrap_naming_chars.py  cli.py  demo.py  export_review_candidates.py  fetch_chinapis_given_names.py  fetch_wikidata_famous.py  import_characters.py  import_classics.py  import_famous_names.py  import_name_char_stats.py  validate_classics.py  validate_famous_names.py
tests/: conftest.py  test_api.py  test_audit_character_reviews.py  test_bazi.py  test_cache.py  test_corpus.py  test_db_session.py  test_import_characters.py  test_import_classics.py  test_import_famous_names.py  test_import_name_char_stats.py  test_llm_review.py  test_monitoring.py  test_performance.py  test_scoring.py  test_shuli.py  test_validate_classics.py  test_wuge.py
(+21 files in other folders)
